Fix Company Language section grip gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -434,7 +434,7 @@ button:hover {
   }
 
   .compn-lan {
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 3fr 3fr;
     gap: 2rem;
     margin-top: 1.25rem;
   }
@@ -447,6 +447,7 @@ button:hover {
   .compn-lan p {
     font-weight: 500;
     font-size: 1vw;
+    margin-right: 2rem;
   }
 
   .card-body {
